testdata/baselines/reference/submodule/compiler/shorthandPropertyAssignmentInES6Module.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
test.ts(2,19): error TS2307: Cannot find module './missingModule' or its corresponding type declarations.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== existingModule.ts (0 errors) ====
    export var x = 1;
    
==== test.ts (1 errors) ====
    import {x} from './existingModule';
    import {foo} from './missingModule';
                      ~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module './missingModule' or its corresponding type declarations.
    
    declare function use(a: any): void;
    
    const test = { x, foo };
    
    use(x);
    use(foo);